--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,2 +1,34 @@
-<h2>Contact</h2>
-<p>Send me and email at programmer@gmail.com</p>
+<h2>Contact me</h2>
+{{#if isSent}}
+<div class="isSent">
+    <p class="mess">The message has been sent! File {{file}} has been saved!</p>
+</div>
+{{/if}}
+{{#if isError}}
+<div class="isError">
+    <p class="mess">You can't leave fields empty!</p>
+</div>
+{{/if}}
+<form action="/contact/send-message" method="POST">
+    <label>
+        Your name: <input type="text" name="author">
+    </label>
+    <label>
+        Your email: <input type="email" name="sender">
+    </label>
+    <label>
+        Title: <input type="text" name="title">
+    </label>
+    <label>
+        Project design: <input type="file" name="file" accept=".png, .jpg, .jpeg, .gif.">
+    </label>
+    {{#if isValid}}
+        <div class="isError">
+            <p class="mess">File {{file}} has not correct extension!</p>
+        </div>
+    {{/if}}
+    <label>
+        Message: <textarea name="message"></textarea>
+    </label>
+    <button type="submit">Send message</button>
+</form>
